@@ -18,7 +18,9 @@ package com.android.launcher3;
 
 import static com.android.launcher3.AbstractFloatingView.TYPE_WIDGET_RESIZE_FRAME;
 import static com.android.launcher3.BubbleTextView.DISPLAY_FOLDER;
+import static com.android.launcher3.Flags.enableFileSystemFoldersAsDropTargets;
 import static com.android.launcher3.Flags.enableSystemDragToOtherApps;
+import static com.android.launcher3.Flags.enableTaskbarDragAndDrop;
 import static com.android.launcher3.Flags.injectableModelItems;
 import static com.android.launcher3.Flags.refactorTaskbarUiState;
 import static com.android.launcher3.LauncherAnimUtils.SPRING_LOADED_EXIT_DELAY;
@@ -28,6 +30,8 @@ import static com.android.launcher3.LauncherSettings.Favorites.CONTAINER_HOTSEAT
 import static com.android.launcher3.LauncherSettings.Favorites.CONTAINER_HOTSEAT_PREDICTION;
 import static com.android.launcher3.LauncherSettings.Favorites.ITEM_TYPE_APPWIDGET;
 import static com.android.launcher3.LauncherSettings.Favorites.ITEM_TYPE_FILE_SYSTEM_FILE;
+import static com.android.launcher3.LauncherSettings.Favorites.ITEM_TYPE_FILE_SYSTEM_FOLDER;
+import static com.android.launcher3.LauncherSettings.Favorites.ITEM_TYPE_SYSTEM_DRAG;
 import static com.android.launcher3.LauncherState.ALL_APPS;
 import static com.android.launcher3.LauncherState.DESKTOP_DRAG_MODE;
 import static com.android.launcher3.LauncherState.EDIT_MODE;
@@ -59,7 +63,9 @@ import android.app.WallpaperManager;
 import android.appwidget.AppWidgetHostView;
 import android.appwidget.AppWidgetProviderInfo;
 import android.content.ClipData;
+import android.content.ClipDescription;
 import android.content.Context;
+import android.content.Intent;
 import android.content.res.Resources;
 import android.graphics.Point;
 import android.graphics.PointF;
@@ -97,6 +103,7 @@ import com.android.launcher3.celllayout.CellLayoutLayoutParams;
 import com.android.launcher3.celllayout.CellPosMapper;
 import com.android.launcher3.celllayout.CellPosMapper.CellPos;
 import com.android.launcher3.config.FeatureFlags;
+import com.android.launcher3.dragndrop.BaseItemDragListener;
 import com.android.launcher3.dragndrop.DragController;
 import com.android.launcher3.dragndrop.DragLayer;
 import com.android.launcher3.dragndrop.DragOptions;
@@ -142,6 +149,7 @@ import com.android.launcher3.util.IntSet;
 import com.android.launcher3.util.IntSparseArrayMap;
 import com.android.launcher3.util.LauncherBindableItemsContainer;
 import com.android.launcher3.util.MSDLPlayerWrapper;
+import com.android.launcher3.util.ObjectWrapper;
 import com.android.launcher3.util.OverlayEdgeEffect;
 import com.android.launcher3.util.RunnableList;
 import com.android.launcher3.util.Thunk;
@@ -158,6 +166,7 @@ import com.android.systemui.plugins.shared.LauncherOverlayManager.LauncherOverla
 import com.google.android.msdl.data.model.MSDLToken;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
@@ -175,8 +184,7 @@ import java.util.function.Predicate;
 public class Workspace<T extends View & PageIndicator> extends PagedView<T>
         implements DropTarget, DragSource, View.OnTouchListener, CellLayoutContainer,
         DragController.DragListener, Insettable, StateHandler<LauncherState>,
-        WorkspaceLayoutManager, LauncherBindableItemsContainer, LauncherOverlayCallbacks,
-        BoxSelectionHelper.BoxSelectionHost {
+        WorkspaceLayoutManager, LauncherBindableItemsContainer, LauncherOverlayCallbacks {
 
     /**
      * The value that {@link #mTransitionProgress} must be greater than for
@@ -272,6 +280,7 @@ public class Workspace<T extends View & PageIndicator> extends PagedView<T>
 
     public static final int REORDER_TIMEOUT = 650;
     protected final Alarm mReorderAlarm = new Alarm();
+    private PreviewBackground mFolderAddBg;
     private PreviewBackground mFolderCreateBg;
     /** The underlying view that we are dragging something over. */
     private View mDragOverView = null;
@@ -1171,14 +1180,6 @@ public class Workspace<T extends View & PageIndicator> extends PagedView<T>
         mLauncher.getOverlayManager().onDisallowSwipeToMinusOnePage();
     }
 
-    @Override
-    public ViewGroup getBoxSelectionHostContainer() {
-        if (shouldEnableCursorDrivenWorkflows(getContext())) {
-            return mLauncher.getDragLayer();
-        }
-        return null;
-    }
-
     /**
      * Called directly from a CellLayout (not by the framework), after we've been added as a
      * listener via setOnInterceptTouchEventListener(). This allows us to tell the CellLayout
@@ -1766,6 +1767,44 @@ public class Workspace<T extends View & PageIndicator> extends PagedView<T>
                 new DragPreviewProvider(child), options);
     }
 
+    // Gets ClipData to used for system drag if dragging the item is expected to start a system
+    // drag. Returns null otherwise.
+    @Nullable
+    private ClipData getClipDataForSystemDrag(ItemInfo item) {
+        if (!enableSystemDragToOtherApps()) {
+            return null;
+        }
+
+        if (HomeScreenFilesUtilsKt.isFileSystemItem(item)) {
+            final HomeScreenFile file = HomeScreenFilesUtilsKt.getHomeScreenFile(item);
+            if (file == null) {
+                return null;
+            }
+            return new ClipData(
+                    /* label= */ "",
+                    new String[]{file.getMimeType()},
+                    new ClipData.Item(file.getUri()));
+
+        }
+
+        if (!enableTaskbarDragAndDrop()) {
+            return null;
+        }
+        String internalMimeType = BaseItemDragListener.getInternalMimeTypeForItem(item);
+        if (internalMimeType == null) {
+            return null;
+        }
+
+        ClipDescription clipDescription = new ClipDescription("", new String[]{internalMimeType});
+        Intent intent = new Intent();
+        Bundle wrappedItem = new Bundle();
+        wrappedItem.putBinder(BaseItemDragListener.EXTRA_WRAPPED_ITEM_INFO,
+                ObjectWrapper.wrap(item));
+        intent.putExtra(BaseItemDragListener.EXTRA_WRAPPED_ITEM_INFO, wrappedItem);
+
+        return new ClipData(clipDescription, new ClipData.Item(intent));
+    }
+
     /**
      * Core functionality for beginning a drag operation for an item that will be dropped within
      * the workspace
@@ -1850,30 +1889,27 @@ public class Workspace<T extends View & PageIndicator> extends PagedView<T>
         }
 
         DragView dv = null;
-
         // TODO(458058227): Move this entire code block to [DragController].
-        if (enableSystemDragToOtherApps()
-                && HomeScreenFilesUtilsKt.isFileSystemItem(dragObject)) {
-            final HomeScreenFile file = HomeScreenFilesUtilsKt.getHomeScreenFile(dragObject);
-            if (file != null) {
-                dv = SystemDragController.INSTANCE.get(mLauncher).startDrag(
-                        new SystemDragParams(
-                                new ClipData(
-                                        /*label=*/ "",
-                                        new String[] { file.getMimeType() },
-                                        new ClipData.Item(file.getUri())),
-                                /*closeAllOpenViews=*/ false,
-                                requireNonNull(drawable),
-                                dragObject,
-                                dragLayerX,
-                                dragLayerY,
-                                dragOptions,
-                                dragRect,
-                                source,
-                                /*dragViewScaleOnDrop=*/ scale,
-                                requireNonNull(draggableView),
-                                /*initialDragViewScale=*/ scale * iconScale));
-            }
+        final ClipData systemDragClipData = getClipDataForSystemDrag(dragObject);
+        if (systemDragClipData != null) {
+            dv = SystemDragController.INSTANCE.get(mLauncher).startDrag(
+                    new SystemDragParams(
+                            systemDragClipData,
+                            HomeScreenFilesUtilsKt.isFileSystemItem(dragObject)
+                                    ? DRAG_FLAG_GLOBAL | DRAG_FLAG_GLOBAL_URI_READ
+                                            | DRAG_FLAG_GLOBAL_URI_WRITE
+                                    : DRAG_FLAG_GLOBAL_SAME_APPLICATION,
+                            /*closeAllOpenViews=*/ false,
+                            requireNonNull(drawable),
+                            dragObject,
+                            dragLayerX,
+                            dragLayerY,
+                            dragOptions,
+                            dragRect,
+                            source,
+                            /*dragViewScaleOnDrop=*/ scale,
+                            requireNonNull(draggableView),
+                            /*initialDragViewScale=*/ scale * iconScale));
         }
 
         if (dv == null) {
@@ -2046,7 +2082,6 @@ public class Workspace<T extends View & PageIndicator> extends PagedView<T>
         if (distance > target.getFolderCreationRadius(targetCell)) return false;
         View dropOverView = target.getChildAt(targetCell[0], targetCell[1]);
         return willAddToExistingUserFolder(dragInfo, dropOverView);
-
     }
 
     boolean willAddToExistingUserFolder(ItemInfo dragInfo, View dropOverView) {
@@ -2064,6 +2099,18 @@ public class Workspace<T extends View & PageIndicator> extends PagedView<T>
                 return true;
             }
         }
+
+        if (enableFileSystemFoldersAsDropTargets()
+                && dropOverView != null
+                && dropOverView.getTag() instanceof ItemInfo dropOverInfo
+                && dropOverInfo.itemType == ITEM_TYPE_FILE_SYSTEM_FOLDER) {
+            final boolean hasMoved = mDragInfo == null || dropOverView != mDragInfo.cell;
+            if (hasMoved && (dragInfo.itemType == ITEM_TYPE_SYSTEM_DRAG
+                    || HomeScreenFilesUtilsKt.isFileSystemItem(dragInfo))) {
+                return true;
+            }
+        }
+
         return false;
     }
 
@@ -2132,6 +2179,10 @@ public class Workspace<T extends View & PageIndicator> extends PagedView<T>
         if (!mAddToExistingFolderOnDrop) return false;
         mAddToExistingFolderOnDrop = false;
 
+        return addToExistingFolder(dropOverView, d, external);
+    }
+
+    boolean addToExistingFolder(View dropOverView, DragObject d, boolean external) {
         if (dropOverView instanceof FolderIcon) {
             FolderIcon fi = (FolderIcon) dropOverView;
             if (fi.acceptDrop(d.dragInfo)) {
@@ -2145,6 +2196,50 @@ public class Workspace<T extends View & PageIndicator> extends PagedView<T>
                 return true;
             }
         }
+
+        if (enableFileSystemFoldersAsDropTargets()
+                && dropOverView != null
+                && dropOverView.getTag() instanceof ItemInfo dropOverInfo
+                && dropOverInfo.itemType == ITEM_TYPE_FILE_SYSTEM_FOLDER) {
+            final List<Uri> uriList;
+
+            if (d.originalDragInfo instanceof SystemDragItemInfo systemDragInfo) {
+                uriList = systemDragInfo.getUriList();
+            } else {
+                final HomeScreenFile file = HomeScreenFilesUtilsKt.getHomeScreenFile(d.dragInfo);
+                uriList = file != null ? Collections.singletonList(file.getUri()) : null;
+            }
+
+            if (uriList != null) {
+                final String relativeFolderPath =
+                        requireNonNull(HomeScreenFilesUtilsKt.getHomeScreenFile(dropOverInfo))
+                                .getDisplayName();
+
+                final CompletableFuture<Void> unused =
+                        HomeScreenFilesProvider.INSTANCE.get(mLauncher)
+                                .moveToHomeScreen(uriList, relativeFolderPath)
+                                .get(0)
+                                .handle((result, throwable) -> {
+                                    // TODO(b/463389684): Notify user on failure.
+                                    return null;
+                                });
+
+                if (mDragInfo != null) {
+                    getParentCellLayoutForView(mDragInfo.cell).removeView(mDragInfo.cell);
+                }
+
+                if (d.dragView != null) {
+                    mLauncher.getDragLayer().animateViewIntoPosition(
+                            d.dragView, /*pos=*/ new int[]{0, 0}, /*alpha=*/ 0.0f,
+                            /*scaleX=*/ 0.0f, /*scaleY=*/ 0.0f,
+                            DragLayer.ANIMATION_END_DISAPPEAR,
+                            /*onFinishRunnable=*/ null, /*duration=*/ 0);
+                }
+
+                return true;
+            }
+        }
+
         return false;
     }
 
@@ -2560,6 +2655,9 @@ public class Workspace<T extends View & PageIndicator> extends PagedView<T>
             mDragOverFolderIcon.onDragExit();
             mDragOverFolderIcon = null;
         }
+        if (mFolderAddBg != null) {
+            mFolderAddBg.animateToRest();
+        }
     }
 
     protected void cleanupReorder(boolean cancelAlarm) {
@@ -2594,11 +2692,6 @@ public class Workspace<T extends View & PageIndicator> extends PagedView<T>
         } else {
             mapPointFromSelfToChild(layout, xy);
         }
-    }
-
-    private boolean isDragWidget(DragObject d) {
-        return (d.dragInfo instanceof LauncherAppWidgetInfo ||
-                d.dragInfo instanceof PendingAddWidgetInfo);
     }
 
     public void onDragOver(DragObject d) {
@@ -2760,17 +2853,10 @@ public class Workspace<T extends View & PageIndicator> extends PagedView<T>
 
     private boolean shouldUseHotseatAsDropLayout(DragObject dragObject) {
         Hotseat hotseat = mLauncher.getHotseat();
-        if (hotseat == null) {
+        if (hotseat == null || !hotseat.isValidDropTarget(dragObject)) {
             return false;
         }
-
-        ShortcutAndWidgetContainer hotseatShortcuts = hotseat.getShortcutsAndWidgets();
-        if (hotseatShortcuts == null
-                || isDragWidget(dragObject)
-                || hotseatShortcuts.getVisibility() != View.VISIBLE) {
-            return false;
-        }
-        getViewBoundsRelativeToWorkspace(hotseatShortcuts, mTempRect);
+        getViewBoundsRelativeToWorkspace(hotseat.getShortcutsAndWidgets(), mTempRect);
         return mTempRect.contains(dragObject.x, dragObject.y);
     }
 
@@ -2881,8 +2967,18 @@ public class Workspace<T extends View & PageIndicator> extends PagedView<T>
 
         boolean willAddToFolder = willAddToExistingUserFolder(info, mDragOverView);
         if (willAddToFolder && mDragMode == DRAG_MODE_NONE) {
-            mDragOverFolderIcon = ((FolderIcon) mDragOverView);
-            mDragOverFolderIcon.onDragEnter(info);
+            if (mDragOverView instanceof FolderIcon) {
+                mDragOverFolderIcon = ((FolderIcon) mDragOverView);
+                mDragOverFolderIcon.onDragEnter(info);
+            } else if (enableFileSystemFoldersAsDropTargets()) {
+                mFolderAddBg = new PreviewBackground(getContext());
+                mFolderAddBg.setup(
+                        mLauncher, mLauncher, /*invalidateDelegate=*/ null,
+                        mDragOverView.getMeasuredWidth(), mDragOverView.getPaddingTop());
+                mFolderAddBg.isClipping = false;
+                mFolderAddBg.animateToAccept(mDragTargetLayout, mTargetCell[0], mTargetCell[1]);
+            }
+
             if (mDragTargetLayout != null) {
                 mDragTargetLayout.clearDragOutlines();
             }
@@ -2976,7 +3072,7 @@ public class Workspace<T extends View & PageIndicator> extends PagedView<T>
             final WorkspaceItemInfo info = new WorkspaceItemInfo();
             info.itemType = ITEM_TYPE_FILE_SYSTEM_FILE;
             info.intent = HomeScreenFilesUtils.Companion.buildLaunchIntent(
-                    requireNonNull(dragInfo.getUriList()).getFirst());
+                    requireNonNull(dragInfo.getUriList()).get(0));
 
             d.dragInfo = info;
         }
@@ -3135,9 +3231,10 @@ public class Workspace<T extends View & PageIndicator> extends PagedView<T>
                 // NOTE: On failure to move the first dropped URI, we must explicitly remove its
                 // associated workspace item to keep launcher state in sync with file system state.
                 CompletableFuture<Void> unused =
-                        results.getFirst().handle((result, throwable) -> runOnUiThread(() -> {
+                        results.get(0).handle((result, throwable) -> runOnUiThread(() -> {
                             if (throwable != null || !result) {
                                 mLauncher.removeItem(firstItemView, firstItemInfo, true);
+                                // TODO(b/463389684): Notify user on failure.
                             }
                         }));
 
@@ -3717,7 +3814,7 @@ public class Workspace<T extends View & PageIndicator> extends PagedView<T>
     @Override
     protected boolean isSignificantMove(float absoluteDelta, int pageOrientedSize) {
         DeviceProfile deviceProfile = mLauncher.getDeviceProfile();
-        if (!deviceProfile.getDeviceProperties().isTablet()) {
+        if (!deviceProfile.getDeviceProperties().isLargeScreen()) {
             return super.isSignificantMove(absoluteDelta, pageOrientedSize);
         }
 
